Fix header elemnt not showing

--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,10 @@ h1 {
     font-size: 0.8rem;
 }
 
+.current-header {
+    text-align: center;
+}
+
 .current-city {
     font-size: 2rem;
     text-align: center;
@@ -150,6 +154,11 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.current-description {
+    font-size: 1.5rem;
+    margin-top: 20px;
 }
 
 .current-clock {
